--- a/example 1/catalogs/src/main/resources/application.yml
+++ b/example 1/catalogs/src/main/resources/application.yml
@@ -8,10 +8,9 @@ spring:
     
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?useSSL=false
+    url: jdbc:mysql://localhost:3306/test
     username: root
     password: Lalo3032
   jpa:
-    hibernate.ddl-auto: create
-    generate-ddl: true
-    show-sql: true
+    hibernate:
+      ddl-auto: update
