--- a/example 1/catalogs/src/main/resources/application.yml
+++ b/example 1/catalogs/src/main/resources/application.yml
@@ -7,10 +7,15 @@ spring:
     allow-bean-definition-overriding: true
     
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test
     username: root
     password: Lalo3032
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: update # Usa "update" durante el desarrollo, pero puedes usar "validate" o "none" para producción.
+    show-sql: true # Muestra las consultas SQL ejecutadas por Hibernate
+    properties:
+      hibernate:
+        format_sql: true # Formatea las consultas SQL
