--- a/example 1/catalogs/pom.xml
+++ b/example 1/catalogs/pom.xml
@@ -58,9 +58,18 @@
 	
 	    <!-- Base de datos mysql para pruebas (cualquier otra DB puede ser configurada) -->
 	    <dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>6.0.4</version>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
 		</dependency>
 		
 	    <!-- Spring Boot Test para pruebas unitarias -->
